# arduino-lmic

./: CMakeLists.txt  Kconfig
.github/workflows/: ci-arduinocli.yml
project_config/: lmic_project_config.h
src/lmic/: lmic_config_preconditions.h
